Java 17 (#22)
* Changed to Java 17